# Workbench-APP

./: .gitignore  DECISIONS.md  DEVLOG.md  LICENSE  MEMORY.md  README.md  SPIKE-keystate.md  claude.md  index.html  package-lock.json  package.json  reasonix.toml  tsconfig.node.json  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: apps.rs  dragdrop.rs  everything.rs  filesearch.rs  hotkey.rs  lib.rs  main.rs
