[package]
name = "workbench-app"
version = "0.1.0"
description = "Windows Desktop Workbench Utility"
authors = ["you"]
edition = "2021"

[lib]
name = "workbench_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.58", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_UI_Input_KeyboardAndMouse",
] }
once_cell = "1.19"
parselnk = "0.1"
walkdir = "2.5"
flate2 = "1.1"
tauri-plugin-store = "2"
enigo = "0.2"
arboard = "3"
image = "0.25"
