[package]
name = "workbench-app"
version = "0.1.0"
description = "Windows Desktop Workbench Utility"
authors = ["you"]
edition = "2021"

[lib]
name = "workbench_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.58", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Threading",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_UI_Shell",
  "Win32_System_Com",
  # 原生拖入（中转区 drag-in）：自注册 IDropTarget 所需
  "Win32_System_Ole",
  "Win32_System_SystemServices",
  "Win32_System_Com_StructuredStorage",
  "Win32_Graphics_Gdi",
  "implement",
] }
# #[implement] 宏生成 windows_core:: 路径，用 umbrella windows crate 时需把它列为直接依赖
windows-core = "0.58"
walkdir = "2.5"
flate2 = "1.1"
tauri-plugin-store = "2"
enigo = "0.2"
arboard = "3"
image = "0.25"
